@@ -1,3 +1,14 @@
+2011-10-18  Alexis Menard  <alexis.menard@openbossa.org>
+
+        [Qt][WK2] Some QML tests were accidentally committed.
+        https://bugs.webkit.org/show_bug.cgi?id=70321
+
+        Reviewed by Andreas Kling.
+
+        These tests were committed by accident. They should not be there.
+
+        * UIProcess/API/qt/tests/qmltests/DesktopWebView/tst_preferences.qml:
+
 2011-10-18  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>
 
         [Qt] Send mouse move events when we handle HoverEnter/Leave in QDesktopWebView
